refactor: 重构权限功能 (#3)
