# docs/swagger.json
@@ -44,13 +44,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                                    "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_internal_model_permission.User"
+                                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_internal_model_permission.User"
                                         }
                                     }
                                 }
@@ -60,19 +60,19 @@
                     "400": {
                         "description": "参数错误或账号已存在",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "401": {
                         "description": "未授权",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "500": {
                         "description": "服务器内部错误",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     }
                 }
@@ -106,31 +106,31 @@
                     "200": {
                         "description": "删除成功",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "400": {
                         "description": "参数错误",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "401": {
                         "description": "未授权",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "404": {
                         "description": "用户不存在",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "500": {
                         "description": "服务器内部错误",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     }
                 }
@@ -176,31 +176,31 @@
                     "200": {
                         "description": "更新成功",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "400": {
                         "description": "参数错误",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "401": {
                         "description": "未授权",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "404": {
                         "description": "用户不存在",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "500": {
                         "description": "服务器内部错误",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     }
                 }
@@ -244,13 +244,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                                    "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.PageData"
+                                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.PageData"
                                         }
                                     }
                                 }
@@ -260,13 +260,13 @@
                     "401": {
                         "description": "未授权",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "500": {
                         "description": "服务器内部错误",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     }
                 }
@@ -302,7 +302,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                                    "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                                 },
                                 {
                                     "type": "object",
@@ -318,19 +318,19 @@
                     "400": {
                         "description": "参数错误",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "401": {
                         "description": "用户名或密码错误",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     },
                     "500": {
                         "description": "服务器内部错误",
                         "schema": {
-                            "$ref": "#/definitions/github_com_seeley-chen_vsb-server_pkg_response.Response"
+                            "$ref": "#/definitions/github_com_Vanselyn_vsb-server_pkg_response.Response"
                         }
                     }
                 }
@@ -338,7 +338,7 @@
         }
     },
     "definitions": {
-        "github_com_seeley-chen_vsb-server_internal_model_permission.User": {
+        "github_com_Vanselyn_vsb-server_internal_model_permission.User": {
             "type": "object",
             "properties": {
                 "account": {
@@ -364,7 +364,7 @@
                 }
             }
         },
-        "github_com_seeley-chen_vsb-server_pkg_response.PageData": {
+        "github_com_Vanselyn_vsb-server_pkg_response.PageData": {
             "type": "object",
             "properties": {
                 "list": {
@@ -384,7 +384,7 @@
                 }
             }
         },
-        "github_com_seeley-chen_vsb-server_pkg_response.Response": {
+        "github_com_Vanselyn_vsb-server_pkg_response.Response": {
             "type": "object",
             "properties": {
                 "code": {
